--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: crawler
     env:
       USER: ${{ secrets.USER }}
       PASSWORD: ${{ secrets.PASSWORD }}
